--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>National Research Repository</title>
   <meta name="viewport" content="width=device-width,minimum-scale=1">
   <meta http-equiv="cache-control" content="no-store">
+  <script src="https://cdn.jsdelivr.net/npm/citation-js@0.4.0-7" type="text/javascript"></script>
 </head>
 
 <body>
